#                    "Merged from", "Cleanup", "Issue", "Adjustment"           #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------

SH-2011-04-29-3: Bugfix:     remove ESC-character from the message to avoid that
                             the message is send as attachment
                 Belongs to: SH-2011-04-29-0
                 Review:     HP

SH-2011-04-29-1: Bugfix:     increased timeout in qdel test
                 Review:     DG

SH-2011-04-29-0: Bugfix:     remove CR-characters from the message to avoid that
                             the message is send as attachment
                 Review:     EB

JG-2011-04-20-0: Bugfix:     small fix in home_dirs test, added dependencies
                             to testsuite framework tests
                 Review:     HP

JG-2011-04-18-1: Bugfix:     final distribution build must contain java html
                             docs (about JJSV and JDRMAA)
                 Issue:      TS-387
                 Review:     DG

JG-2011-04-18-0: Bugfix:     removed an invalid scenario in ge 3306 test
                 Belongs to: JG-2011-04-15-0
                 Review:     SH

EB-2011-04-15-1: Bugfix:     check_option_pty somtimes fails
                 Issue:      TS-386
                 Review:     SH

EB-2011-04-15-0: Bugfix:     fixed failing TS tests that failed due to long
                             long hostnames
                 Issue:      TS-384
                 Review:     SH

JG-2011-04-15-0: Enhancem.:  Extended and activated bugs/jira/3306.
                 Review:     SH

JG-2011-04-14-1: Bugfix:     testsuite function translate doesn't handle
                             float/double parameters
                 Issue:      TS-385